--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="CV16">#FB8BBE</color>
     <color name="CV17">#B5AC02</color>
     <color name="CV18">#8203C2</color>
-    <color name="CV19">#F80A75</color>
+    <color name="CV19">#FF0073</color>
     <color name="CV20">#30FBDF</color>
     <color name="CV21">#5FCAFF</color>
     <color name="CV22">#3954F8</color>
