--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,7 +33,7 @@
     <color name="CV28">#FF42FC</color>
     <color name="CV29">#D37BFF</color>
     <color name="CV30">#FAEFB7</color>
-    <color name="CV31">#FFE600</color>
+    <color name="CV31">#FFAB00</color>
 
     <color name="CV32">#D5B300</color>  // для деления на 0
     <color name="CV33">#B465ED</color>  // для кореннь
