--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-      <style name="Theme.KalkVad_2_1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.KalkVad_2_1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 
-        <item name="colorPrimary">@color/CV37</item>   // Цвет фона заголовка
+
+        <item name="colorPrimary">@color/CV13</item>        // Цвет фона заголовка
 
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -11,8 +12,9 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
 
+        <item name="android:navigationBarColor">@color/CV13</item>
 
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/CV13</item>
 
     </style>
 </resources>
