--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,77 @@
 упорядочивает все дочерние элементы в одном направлении: по горизонтали или по вертикали.
 Все элемены расположены один за другим-->
 
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/CV13"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <RelativeLayout
+        android:id="@+id/activityLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.my.target.ads.MyTargetView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/view_ad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:myTarget_adSize="banner_320x50"
+            app:myTarget_isRefreshAd="false"
+            app:myTarget_slotId="1522084">
+
+        </com.my.target.ads.MyTargetView>
+    </RelativeLayout>
+
+
+    <com.my.target.ads.MyTargetView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/view_ad1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:myTarget_adSize="banner_320x50"
+        app:myTarget_isRefreshAd="false"
+        app:myTarget_slotId="1522084">
+
+    </com.my.target.ads.MyTargetView>
+
+
+    <!-- <com.google.android.gms.ads.AdView
+         xmlns:ads="http://schemas.android.com/apk/res-auto"
+         android:id="@+id/adView"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_centerHorizontal="true"
+         android:layout_alignParentBottom="true"
+         ads:adSize="BANNER"
+
+
+         android:visibility= "gone"
+
+         ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+
+         />-->
+
+    <!--  app:myTarget_adSize="banner_320x50"
+      app:myTarget_slotId="1522084"-->
+
+
+    <!-- set Banner ad position in UI layout design
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/admob_banner_id">
+    </com.google.android.gms.ads.AdView> -->
+
 
     <!-- поле ячейки памяти -->
 
@@ -55,7 +118,7 @@
     <TextView
         android:id="@+id/otvet"
         android:layout_width="match_parent"
-        android:layout_height="40pt"
+        android:layout_height="38pt"
         android:layout_marginLeft="1pt"
         android:layout_marginTop="0.2pt"
         android:layout_marginRight="2pt"
@@ -68,10 +131,11 @@
         android:text="0"
         android:textColor="@color/CV20" />
 
+
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
-        android:layout_height="39pt"
+        android:layout_height="37pt"
         android:layout_marginLeft="1pt"
         android:layout_marginTop="0.2pt"
         android:layout_marginRight="2pt"
@@ -640,16 +704,19 @@
                 app:strokeColor="@color/CV16"
                 app:strokeWidth="4dp" />
 
+
         </TableRow>
 
+
     </LinearLayout>
+
 
     <!-- /*Регулировка громкости*/-->
 
     <SeekBar
         android:id="@+id/volumeControl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_marginLeft="2pt"
         android:layout_marginTop="5pt"
         android:layout_marginRight="2pt"
@@ -659,4 +726,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/playButton" />
 
+
 </LinearLayout>
+
